# gtk4

./: README.md
blueprint-1-0/: meson.build
blueprint-1-0/data/: builder.blp.in  meson.build  unix.gresource.xml.in
blueprint-1-0/locale/: es.po  fr.po  it.po  meson.build  pr.po
blueprint-1-0/src/: callbacks.c  main.c  meson.build
blueprint-2-0/: CMakeLists.txt
blueprint-2-0/data/: CMakeLists.txt  main.gresource.xml.in  resource.rc.in  win.gresource.xml.in
blueprint-2-0/locale/: CMakeLists.txt  es.po  it.po  pr.po
blueprint-2-0/src/: CMakeLists.txt  callbacks.c
blueprint-3-0/: meson.build
blueprint-3-0/data/: meson.build  resource.rc.in
blueprint-3-0/locale/: LINGUAS  es.po  it.po  meson.build  pr.po  ru.po
blueprint-3-0/scripts/: gen_mo_files.py  gen_po_files.py  gen_updated_po.py  locales_cleanup.py  locales_uncleanup.py  meson.build  touch_me.py
blueprint-3-0/src/: callbacks.c  callbacks.h  meson.build
blueprint-3-1/: meson.build  meson.options
blueprint-3-1/data/: builder.blp.in  main.gresource.xml.in  meson.build
blueprint-3-1/locale/: es.po  it.po  meson.build  pr.po
blueprint-3-1/scripts/: backup_locales.py  backup_locales_no_more.py  cleanup_locales.py  configure_file.py  gen_mo_files.py  gen_po_files.py  gen_updated_po.py  init-locales.py  locales_backup.py  locales_cleanup.py  meson.build
blueprint-3-1/src/: callbacks.c  main.c
blueprint-4-0/: meson.build  meson.options
blueprint-4-0/data/: builder.blp.in  meson.build
blueprint-4-0/data/unix/: meson.build
blueprint-4-0/data/win/: meson.build
blueprint-4-0/locale/: POTFILES  blueprint.pot  es.po  it.po  meson.build  pr.po
blueprint-4-0/scripts/: genpot.py  meson.build
blueprint-4-0/src/: meson.build
blueprint-5-0/: CMakeLists.txt  meson.build
blueprint-5-0/data/: CMakeLists.txt  meson.build
blueprint-5-0/data/unix/: CMakeLists.txt  meson.build
blueprint-5-0/data/win/: CMakeLists.txt  meson.build  win.gresource.xml.in
blueprint-5-0/locale/: CMakeLists.txt  LINGUAS  POTFILES  blueprint.pot  es.po  it.po  meson.build  pr.po
blueprint-5-0/scripts/: desktop_build_sys.py  genpot.py  glib_resources.cmake  i18n.cmake  meson.build
blueprint-5-0/src/: CMakeLists.txt
blueprint-5-2/: meson.build
blueprint-5-2/data/: main.gresource.xml.in  meson.build
blueprint-5-2/data/unix/: meson.build
blueprint-5-2/data/win/: meson.build
blueprint-5-2/locale/: POTFILES  blueprint.pot  es.po  it.po  meson.build  pr.po
blueprint-5-2/scripts/: delete.py  meson.build  potfile.py
blueprint-5-2/src/: main.c
blueprint-5-3/: meson.build
blueprint-5-3/data/: builder.glade.blp  builder.glade.blp.in  main.gresource.xml.in  meson.build
blueprint-5-3/data/unix/: meson.build  unix.gresource.xml.in
blueprint-5-3/data/win/: meson.build  win.gresource.xml.in
blueprint-5-3/locale/: LINGUAS  POTFILES  blueprint.pot  es.po  fr.po  it.po  meson.build  pr.po
blueprint-5-3/scripts/: desktop.py  meson.build
blueprint-5-3/src/: MesonHelper.c.in  MesonHelper.h  callbacks.c  meson.build
blueprint-5-4/: meson.build
blueprint-5-4/data/: builder.glade.blp  main.gresource.xml.in
blueprint-5-4/locale/: POTFILES  blueprint.pot  es.po  fr.po  it.po  meson.build  pr.po
blueprint-5-4/src/: MesonHelper.h.in  callbacks.c  callbacks.h  main.c
blueprint-6-0/: meson.build
blueprint-6-0/data/: meson.build
blueprint-6-0/locale/: POTFILES  blueprint.pot  es.po  fr.po  it.po  meson.build  pr.po
blueprint-6-0/src/: callbacks.c  callbacks.h  main.c
gtktest-1/gtktest-1.0/: CMakeLists.txt
gtktest-1/gtktest-1.0/src/: CMakeLists.txt  main.c
gtktest-1/gtktest-1.1/: CMakeLists.txt
gtktest-1/gtktest-1.1/src/: main.c
gtktest-1/gtktest-1.2/: CMakeLists.txt
gtktest-1/gtktest-1.2/data/: resource.gresource.xml
gtktest-1/gtktest-1.2/src/: CMakeLists.txt  main.c
gtktest-2.1/: CMakeLists.txt
gtktest-2.1/src/: callbacks.c  callbacks.h  helper.h
gtktest-2/gtktest-2.1/data/: CMakeLists.txt  resource.gresource.xml
gtktest-2/gtktest-2.1/src/: CMakeLists.txt  helper.c  main.c  main.h
gtktest-2/gtktest-2.2/: CMakeLists.txt
gtktest-2/gtktest-2.2/data/: resources.gresource.xml
gtktest-2/gtktest-2.2/src/: CMakeLists.txt  CellItem.c  CellItem.h  MyApp.c  MyApp.h  MyAppWindow.c  MyAppWindow.h  callbacks.c  callbacks.h  main.c  main.h
gtktest-2/gtktest-2.3/: CMakeLists.txt
gtktest-2/gtktest-2.3/data/: resources.gresource.xml
gtktest-2/gtktest-2.3/src/: CellItem.h  MyApp.c  MyApp.h  MyDialogs.c  MyDialogs.h  callbacks.c  callbacks.h
gtktest-2/gtktest-2.4/: CMakeLists.txt
gtktest-2/gtktest-2.4/data/: CMakeLists.txt
gtktest-2/gtktest-2.4/src/: CMakeLists.txt  CellItem.c  CellItem.h  MyApp.c  MyApp.h  MyAppWindow.c  MyAppWindow.h  MyDialogs.c  MyDialogs.h  callbacks.c  callbacks.h  main.h
gtktest-2/gtktest-2.5/: CMakeLists.txt
gtktest-2/gtktest-2.5/src/: CellItem.c  CellItem.h  MyApp.c  MyApp.h  callbacks.c  (+4 more)
gtktest-3-0/: meson.build
gtktest-3-0/data/: main.gresource.xml.in  meson.build
gtktest-3-0/locale/: POTFILES  es.po  gtktest.pot  pr.po
gtktest-3-0/src/: callbacks.c  callbacks.h  main.c  meson.build
xfSoundTheme/: meson.build
xfSoundTheme/data/: meson.build  resource.gresource.xml.in  resource.rc.in  windows.resource.gresource.xml
xfSoundTheme/src/: callbacks.c  callbacks.h  main.c  main.h  meson.build
xfSoundThemei18n/: meson.build  meson.options
xfSoundThemei18n/data/: linux.resource.gresource.xml.in  meson.build  xfSoundThemei18n.desktop.in  xfSoundThemei18n.pot
xfSoundThemei18n/locale/: LINGUAS  es.po  fr.po  it.po  meson.build  pr.po
xfSoundThemei18n/locales/: LINGUAS  es_MX.po  fr.po  meson.build  pr.po
xfSoundThemei18n/scripts/: gen_locales_mo.py  gen_locales_po.py  gen_updated_locales_po.py  meson.build
xfSoundThemei18n/src/: callbacks.c  callbacks.h  main.c  main.h  meson.build
xfSoundThemei18n3/: meson.build
xfSoundThemei18n3/data/: main.gresource.xml.in  meson.build  ui.glade.blp
xfSoundThemei18n3/locale/: POTFILES  es.po  fr.po  it.po  pr.po  xfSoundThemei18n.pot
xfSoundThemei18n3/src/: callbacks.c  callbacks.h  main.c  meson.build
